# winamp

./: .cvsignore  .gitignore  AUTHORS  Build.txt  ChangeLog  In2.h  Makefile.am  NEWS  README  TODO  appveyor.yml  configure.ac  configure.in  debug.h  frontend.h  in_adlib.cpp  in_adlib.dsp  in_adlib.psc  in_adlib.psc.in  in_adlib.rc  in_adlib.txt  resource.h
contrib/: README
contrib/MSVC6/: in_adlib.dsp
contrib/vs2015/: vs2015.sln
contrib/vs2015/in_adlib/: in_adlib.vcxproj  packages.config
src/: .cvsignore  Makefile.am  callback.cpp  config.cpp  config.h  debug.h  dlg_about.cpp  dlg_about.h  dlg_config.cpp  dlg_config.h  dlg_info.cpp  dlg_info.h  filetypes.cpp  filetypes.h  gui_link.cpp  gui_link.h  gui_tip.cpp  gui_tip.h  in_adlib.dsp  in_adlib.psc  in_adlib.rc  out.h  player.cpp  player.h  plugin.cpp  plugin.h  resource.h  version.h  version.h.in
src/rsrc/: in_adlib.rc  resource.h
